[YW-287] refactor ranking